Conclusion was missing. Now it is done

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2723,7 +2723,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font color= #6B6B6B> <font size = 6> 6. Conclusion </font>"
+    "# <font color= #6B6B6B> <font size = 6> 6. Conclusion </font>\n",
+    "    \n",
+    "Pasive investment resulted to perform better in the practice than active investment. The main advantage of passive investing is its lower costs compared to active investing. This is because passive funds do not require expensive research, analysis or management to pick stocks, which results in lower fees and higher returns for investors. \n",
+    "    \n",
+    "Additionally, passive investment tends to perform similarly to the overall market, meaning that it has less risk of underperforming. On the other hand, active investing involves a more hands-on approach, in which the investor or a professional manager actively selects, buys and sells individual stocks in an attempt to beat the market. This approach can be more time-consuming and expensive, and there is no guarantee of outperforming the market. Therefore, passive investment can be a better option for most investors looking to build long-term wealth with lower costs and less risk."
    ]
   },
   {
